--- a/src/frontend/templates/chat.html
+++ b/src/frontend/templates/chat.html
@@ -18,6 +18,7 @@
             <button type="submit">Enviar</button>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="/static/chat.js"></script>
 </body>
 </html> 
